# ablate-suite

./: .gitignore  CONFIG.toml  EHL.txt  README.md  ablation_test.json  candidate_0.pt  install.ps1  pyproject.toml  req.txt
src/: abliteration.py  baking.py  chat.py  inference.py  steering.py  tools.py  utils.py
